fix sponsor page cutoff

--- a/src/styles/Sponsors.css
+++ b/src/styles/Sponsors.css
@@ -2,6 +2,7 @@
   min-height: 75vh;
   background-color: #fafafa;
   position: relative;
+  padding-bottom: 3vh;
 }
 .sponsors-text {
   color: white;
